# AddInECRDriver

./: .editorconfig  .gitignore  AddInNative.cpp  AddInNative.h  CAddInECRCommonSC.sln  CAddInECRCommonSC.vcxproj  CAddInECRCommonSC.vcxproj.filters  CMakeLists.txt  DriverPOSTerminal.cpp  DriverPOSTerminal.h  IAddInBase.h  IDriver1CUniBase.h  POSTerminal.sln  README.md  SysUtils.cpp  SysUtils.h  addin_ecr_common.cpp  addin_ecr_common.h  build.yml  build_cmake.out  common_main.cpp  common_main.h  common_types.h  debug.out.txt  interface_fiscal_driver.h  localization.h  pch.h  resource.h  resource.rc  string_conversion.cpp  string_conversion.h  vcpkg.json
include/openssl/: configuration.h
include/pugixml/: pugiconfig.hpp
include/vncomp/: ComponentBase.h
lic_key/: lic_key.pub
localization/: CMakeLists.txt  en.rcb  ru.rcb
pack_info/: info.xml  manifest.xml
src/: CMakeLists.txt  ECRDriver.vcxproj  ECRDriver.vcxproj.filters  addin_driver.cpp  addin_driver.h  channel_protocol.cpp  channel_protocol.h  common_main.cpp  common_main.h  common_types.cpp  common_types.h  connection_types.cpp  connection_types.h  define_driver.h  dllmain.cpp  driver_pos_terminal.cpp  driver_pos_terminal.h  exports.def  framework.h  interface_addin_base.h  interface_connection.cpp  interface_connection.h  interface_driver_base.cpp  interface_driver_base.h  interface_pos_terminal.h  license_manager.cpp  license_manager.h  localization.cpp  localization_consts.cpp  localization_consts.h  localization_manager.cpp  localization_manager.h  logger.cpp  logger.h  manager_hwid.cpp  manager_hwid.h  pch.h  protocol_consts.cpp  protocol_consts.h  protocol_operation_types.cpp  (+20 more)
test_addin/: AddInBaseStub.cpp  AddInBaseStub.h  CMakeLists.txt  ComponentBaseTester.cpp  ComponentBaseTester.h  common_platform.cpp  common_platform.h  extension_test_script.cpp  extension_test_script.h  parser_call.cpp  parser_call.h  pos_terminal.testscript  str_utils.cpp  str_utils.h  str_utils_test.cpp  str_utils_test.h  str_utils_tools.cpp  str_utils_tools.h  test_addin.cpp  test_addin.vcxproj  test_addin.vcxproj.filters  wide_console.cpp  wide_console.h
tools/: config.ini  config.py  dispatcher.py  emul_terminal.py  make_driver.py
tools/handlers/: PosTerminal_PingDevice.py  PosTerminal_Purchase.py  PosTerminal_ServiceMessage.py
